# opencv-ossim-plugin

./: CMakeLists.txt  Makefile  ProjectHome.md  gdal.vcproj  makefile.vc  ossimOpenCVCannyFilter.cpp  ossimOpenCVCannyFilter.h  ossimOpenCVDilateFilter.cpp  ossimOpenCVDilateFilter.h  ossimOpenCVErodeFilter.cpp  ossimOpenCVErodeFilter.h  ossimOpenCVGoodFeaturesToTrack.cpp  ossimOpenCVGoodFeaturesToTrack.h  ossimOpenCVImageSourceFactory.cpp  ossimOpenCVImageSourceFactory.h  ossimOpenCVLaplaceFilter.cpp  ossimOpenCVLogPolarFilter.cpp  ossimOpenCVLogPolarFilter.h  ossimOpenCVPluginFactory.cpp  ossimOpenCVPluginFactory.h  ossimOpenCVPluginInit.cpp  ossimOpenCVPyrSegmentation.cpp  ossimOpenCVPyrSegmentation.h  ossimOpenCVRegisterFilter.cpp  ossimOpenCVRegisterFilter.h  ossimOpenCVSmoothFilter.cpp  ossimOpenCVSmoothFilter.h  ossimOpenCVSobelFilter.cpp  ossimOpenCVSobelFilter.h  ossimOpenCVSquaresFilter.cpp  ossimOpenCVSquaresFilter.h  ossimOpenCVThresholdFilter.cpp  ossimOpenCVThresholdFilter.h  ossimPluginConstants.h
apps/: canny.cpp  canny.cpp~  corners.cpp  corners.cpp~  dilate.cpp  dilate.cpp~  erode.cpp  erode.cpp~  laplace.cpp  laplace.cpp~  pyrsegmentation.cpp  pyrsegmentation.cpp~  smooth.cpp  smooth.cpp~  sobel.cpp  sobel.cpp~  threshold.cpp  threshold.cpp~
kwl/: canny.spec~  features.spec~  smooth.spec~  sobel.spec~  threshold.spec~
macosx/libgdalplugin/libgdalplugin.xcodeproj/: project.pbxproj
plugin/: CMakeLists.txt  ossimOpenCVCannyFilter.cpp  ossimOpenCVCannyFilter.h  ossimOpenCVDilateFilter.cpp  ossimOpenCVDilateFilter.h  ossimOpenCVErodeFilter.cpp  ossimOpenCVErodeFilter.h  ossimOpenCVGoodFeaturesToTrack.cpp  ossimOpenCVGoodFeaturesToTrack.h  ossimOpenCVLaplaceFilter.cpp  ossimOpenCVLaplaceFilter.h  ossimOpenCVLogPolarFilter.cpp  ossimOpenCVLogPolarFilter.h  ossimOpenCVMSERFeatures.cpp  ossimOpenCVMSERFeatures.h  ossimOpenCVPluginFactory.cpp  ossimOpenCVPluginInit.cpp  ossimOpenCVPyrSegmentation.cpp  ossimOpenCVPyrSegmentation.h  ossimOpenCVSURFFeatures.cpp  ossimOpenCVSURFFeatures.h  ossimOpenCVSmoothFilter.cpp  ossimOpenCVSmoothFilter.h  ossimOpenCVSobelFilter.cpp  ossimOpenCVSobelFilter.h  ossimOpenCVSquaresFilter.h  ossimOpenCVStarFeatures.cpp  ossimOpenCVStarFeatures.h  ossimOpenCVThresholdFilter.cpp  ossimOpenCVThresholdFilter.h
